--- a/package.json
+++ b/package.json
@@ -1,34 +1,72 @@
 {
-  "name": "undefined",
+  "name": "Frontier",
   "description": "A minimal starter theme for the Ghost blogging platform",
-  "demo": "http://github.com/curiositry/undefined-ghost-theme",
-  "version": "1.0.3",
+  "demo": "xxxx",
+  "version": "1.0.0",
+  "licenses": [
+    {
+      "type": "MIT",
+      "url": "http://opensource.org/licenses/MIT"
+    }
+  ],
   "engines": {
-      "ghost": ">=1.17.3"
+    "ghost": ">=1.17.3",
+    "node": ">= 6.9.0"
   },
   "author": {
-      "name": "Curiositry",
-      "email": "isa@automathic.org",
-      "url": "http://curiositry.com"
+    "name": "James White",
+    "email": "james@jfwhite.org",
+    "url": "https://jamesfacts.com"
   },
+  "scripts": {
+    "build": "./node_modules/.bin/webpack --progress --config src/build/webpack.config.js",
+    "build:prod": "./node_modules/.bin/webpack --progress -p --config src/build/webpack.config.js",
+    "start": "./node_modules/.bin/webpack --hide-modules --watch --config src/build/webpack.config.js"
+  },
+  "devDependencies": {
+    "autoprefixer": "^8.0.0",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.3",
+    "babel-preset-env": "^1.6.1",
+    "browser-sync": "^2.23.6",
+    "browser-sync-webpack-plugin": "^2.0.1",
+    "clean-webpack-plugin": "^0.1.18",
+    "css-loader": "^0.28.10",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "html-loader": "^0.5.5",
+    "html-webpack-plugin": "^3.0.4",
+    "node-sass": "^4.7.2",
+    "postcss": "^6.0.19",
+    "postcss-flexbugs-fixes": "^3.3.0",
+    "postcss-loader": "^2.1.1",
+    "precss": "^3.1.2",
+    "sass-loader": "^6.0.6",
+    "style-loader": "^0.20.2",
+    "webpack": "^4.0.1",
+    "webpack-cli": "^2.0.9"
+  },
+  "browserslist": [
+    "> 5%",
+    "last 2 versions"
+  ],
   "config": {
-      "posts_per_page": 5
+    "posts_per_page": 5
   },
   "gpm": {
-      "type": "theme",
-      "categories": [
-          "Minimal",
-          "Responsive",
-          "Starter theme",
-          "Boilerplate",
-          "Typographic"
-      ]
+    "type": "theme",
+    "categories": [
+      "Minimal",
+      "Responsive",
+      "Starter theme",
+      "Boilerplate",
+      "Typographic"
+    ]
   },
   "keywords": [
-      "responsive",
-      "ghost",
-      "starter",
-      "theme",
-      "boilerplate"
+    "responsive",
+    "ghost",
+    "starter",
+    "theme",
+    "boilerplate"
   ]
 }
