--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "browser-sync-webpack-plugin": "^2.0.1",
     "clean-webpack-plugin": "^0.1.18",
     "css-loader": "^0.28.10",
+    "cssnano": "^3.10.0",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^1.1.11",
     "html-loader": "^0.5.5",
@@ -69,5 +70,10 @@
     "starter",
     "theme",
     "boilerplate"
-  ]
+  ],
+  "dependencies": {
+    "bootstrap": "^4.0.0",
+    "jquery": "^3.3.1",
+    "popper.js": "^1.12.9"
+  }
 }
