more webpack tweaks

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Frontier",
+  "name": "frontier",
   "description": "A minimal starter theme for the Ghost blogging platform",
   "demo": "xxxx",
   "version": "1.0.0",
