--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "frontier",
   "description": "A minimal starter theme for the Ghost blogging platform, featuring Webpack, Browsersync, and Bootstrap.",
   "demo": "https://frontier.jamesfacts.com/",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "licenses": [
     {
       "type": "MIT",
@@ -69,7 +69,8 @@
     "starter",
     "theme",
     "boilerplate",
-    "bootstrap"
+    "bootstrap",
+    "ghost-theme"
   ],
   "dependencies": {
     "bootstrap": "^4.0.0",
