add ghost api engine

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "license": "MIT",
   "engines": {
     "ghost": ">=2.29.0",
-    "node": ">=10.14.0"
+    "node": ">=10.14.0",
+    "ghost-api": "v2"
   },
   "author": {
     "name": "James White",
